--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.6",
+    "@react-navigation/drawer": "^5.8.4",
     "expo": "~37.0.3",
     "expo-font": "^8.1.1",
     "react": "~16.9.0",
